Add community-driven gotchas system for shared debugging knowledge
Implements a feedback loop where agents can query curated pitfalls before
coding, submit newly resolved issues during debugging, and maintainers can
review/promote submissions into a shared knowledge base that grows via PRs.

New files:
- gotchas.json: curated knowledge base (11 initial entries covering ScriptUI
  pitfalls, ExtendScript gotchas, and DOM patterns)
- submissions/.gitkeep: local review queue directory

Modified files:
- exec_server.py:
  - Add report_learning(...) tool with duplicate detection
  - Add get_gotchas(context?, min_severity?, top_n?) with filtering
  - Extend get_quick_reference() to append community gotchas dynamically
  - Add MUST/SHOULD operational policy to server instructions
- manage.py:
  - Add review-submissions CLI command with interactive approve/skip/reject
  - Safe write fallback for Windows sync folders
- .gitignore: exclude submissions/*.jsonl
- README.md: document gotchas concept and contribution workflow
- agent.md: add community gotchas workflow section

Agents now automatically check for known pitfalls before writing JSX and
submit learnings after resolving user-reported errors, creating a growing
shared memory across sessions and users.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ omv$*.xml
 # Internal development documents
 indesign_scripting_MCP.code-workspace
 exec-refactoring-log.md
+
+# Local learning submissions (review queue)
+submissions/*.jsonl
